[package]
name = "cli-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
cursive = "0.21.1"
reqwest = { version = "0.12.22", features = ["cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.0"
